src/objects/CountrySetting__c.object
<CustomObject>
    <fields>
        <fullName>Template_type__c</fullName>
        <label>Template type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThursdayException__c</fullName>
        <label>Thursday</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_CalendarExceptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <description>Please indicate the month of the year you want to push the creation of jobs to.</description>
        <label>To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Machine_Clean_Operating_Months_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransportOffset__c</fullName>
        <label>Transport Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Treshold_Days__c</fullName>
        <inlineHelpText>When the number of S10 are reaching the treshold number within this number of Days  it should  generate the Technical Specialist indicator.</inlineHelpText>
        <label>Treshold Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TuesdayException__c</fullName>
        <label>Tuesday</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_CalendarExceptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueRecordKey__c</fullName>
        <description>This field is used to validate against multiple settings for the same country. (TS)</description>
        <label>Unique Record Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <label>User Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Third Party Capacity</fullName>
                </value>
                <value>
                    <fullName>Planner</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>BI Analyst</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>TS Resource</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
                <value>
                    <fullName>Routesales Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Country_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WTSTriggerThreshold__c</fullName>
        <description>[KTS-392]: Contract Triggered Cases (Preventive Maintenance) - Field which indicates the days before a job can be scheduled for Water Filter jobs</description>
        <label>WTS Trigger Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WTS_Suggestion_Treshold__c</fullName>
        <label>WTS Suggestion Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WednesdayException__c</fullName>
        <label>Wednesday</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_CalendarExceptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkOrderType__c</fullName>
        <description>Indicates the type of Work Order for which this record is applicable</description>
        <label>Work Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S10</fullName>
                    <label>Corrective Maintenance</label>
                </value>
                <value>
                    <fullName>S15</fullName>
                    <label>1st Line Corrective Maintenance</label>
                </value>
                <value>
                    <fullName>S20</fullName>
                    <label>Machine Care</label>
                </value>
                <value>
                    <fullName>S30</fullName>
                    <label>Preventive Maintenance</label>
                </value>
                <value>
                    <fullName>S31</fullName>
                    <label>Preventive Check</label>
                </value>
                <value>
                    <fullName>S32</fullName>
                    <label>Water Filter Change</label>
                </value>
                <value>
                    <fullName>S40</fullName>
                    <label>Installation</label>
                </value>
                <value>
                    <fullName>S41</fullName>
                    <label>De-Installation</label>
                </value>
                <value>
                    <fullName>S42</fullName>
                    <label>Machine Movement</label>
                </value>
                <value>
                    <fullName>S43</fullName>
                    <label>Configuration Change</label>
                </value>
                <value>
                    <fullName>S50</fullName>
                    <label>Pick-Up/Drop Off</label>
                </value>
                <value>
                    <fullName>S51</fullName>
                    <label>Pre-Visit Installation</label>
                </value>
                <value>
                    <fullName>S52</fullName>
                    <label>After-Visit Installation</label>
                </value>
                <value>
                    <fullName>S53</fullName>
                    <label>Assistance</label>
                </value>
                <value>
                    <fullName>S60</fullName>
                    <label>Modification</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkshopOffset__c</fullName>
        <label>Workshop Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Country Setting</label>
    <listViews>
        <fullName>All_Settings</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Settings</label>
    </listViews>
    <listViews>
        <fullName>Contract_Trigger_Settings</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>PreventiveMainTriggerThreshold__c</columns>
        <columns>WTSTriggerThreshold__c</columns>
        <columns>WTS_Suggestion_Treshold__c</columns>
        <columns>Supported_Operating_Types_for_S32__c</columns>
        <columns>S41_Threshold__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.ContractTriggerSetting</value>
        </filters>
        <label>Contract Trigger Settings</label>
    </listViews>
    <listViews>
        <fullName>CountryDefaultOperatingCalendar</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Country__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>StartofBusinessDay__c</columns>
        <columns>EndofBusinessDay__c</columns>
        <columns>MondayException__c</columns>
        <columns>TuesdayException__c</columns>
        <columns>WednesdayException__c</columns>
        <columns>ThursdayException__c</columns>
        <columns>FridayException__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.CountryDefaultOperatingCalendar</value>
        </filters>
        <label>Country Default Operating Calendar</label>
    </listViews>
    <listViews>
        <fullName>Country_Case_Owner</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Default_Owner__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.Country_Default_Case_Owner_Rules</value>
        </filters>
        <label>Country Case Owner</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_Operating_Invoice_Bucket</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Bucket__c</columns>
        <columns>Active__c</columns>
        <columns>Minimum__c</columns>
        <columns>Maximum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.Country_Operating_Invoice_Bucket</value>
        </filters>
        <label>Country Operating Invoice Bucket</label>
    </listViews>
    <listViews>
        <fullName>Country_Purchasing_Settings</fullName>
        <columns>NAME</columns>
        <columns>Company_Code__c</columns>
        <columns>PurchOrg__c</columns>
        <columns>PurchGrp__c</columns>
        <columns>POType__c</columns>
        <columns>Vendor__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.Country_Purchasing_Settings</value>
        </filters>
        <label>Country Purchasing Settings</label>
    </listViews>
    <listViews>
        <fullName>Country_Reading_Schedular</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>DefaultStartTime__c</columns>
        <columns>DefaultEndTime__c</columns>
        <columns>Number_SLA_day__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.Counter_Reading_Scheduler</value>
        </filters>
        <label>Country Reading Schedular</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_Round_Trip_Settings</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Product__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.CountryRoundTripSettings</value>
        </filters>
        <label>Country Round-Trip Settings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_SLA_Derivation</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Country__c</columns>
        <columns>ResponseProfile__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.Country_SLA_Derivation</value>
        </filters>
        <label>Country SLA Derivation</label>
    </listViews>
    <listViews>
        <fullName>Country_Schedule_Date_Time</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>OrderType__c</columns>
        <columns>CustomerScheduleDateOffset__c</columns>
        <columns>LSPScheduleDateOffset__c</columns>
        <columns>LSPScheduleTimeOffset__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.CountryScheduleDateTimeSettings</value>
        </filters>
        <label>Country Schedule Date/Time</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_Scheduling_Rules</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Country__c</columns>
        <columns>DeliveryOffset__c</columns>
        <columns>PickupOffset__c</columns>
        <columns>RoundTrip__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.Country_Scheduling_Rules</value>
        </filters>
        <label>Country Scheduling Rules</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_Survey</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>WorkOrderType__c</columns>
        <columns>Survey_Type__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.Country_Survey</value>
        </filters>
        <label>Country Survey</label>
    </listViews>
    <listViews>
        <fullName>Country_Unknown_Contact_To_Account_Mappi</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Account__c</columns>
        <columns>User__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.Country_Unknown_Contact_To_Account_Mapping</value>
        </filters>
        <label>Country Unknown Contact To Account Mappi</label>
    </listViews>
    <listViews>
        <fullName>Currency_Code_Mappings</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Country__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.Currency_Code_Mappings</value>
        </filters>
        <label>Currency Code Mappings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DefaultSLAPerCountry</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Priority__c</columns>
        <columns>Coffee_is_Running__c</columns>
        <columns>AssetResponseProfile__c</columns>
        <columns>ResponseProfile__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CountrySetting__c.CountryResponseProfile</value>
        </filters>
        <label>Default SLA/Response Profile Per Country</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Settings</pluralLabel>
    <recordTypes>
        <fullName>APTS_Country_Scheduling_Rules_Ingredients</fullName>
        <active>true</active>
        <description>Country specific rules for setting relative dates on Ordering</description>
        <label>Country Scheduling Rules (Ingredients)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ContractTriggerSetting</fullName>
        <active>true</active>
        <description>[KTS-392]: Contract Triggered Cases (Preventive Maintenance) - Record type for PM and WTS jobs</description>
        <label>Contract Trigger Setting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Counter_Reading_Scheduler</fullName>
        <active>true</active>
        <label>Counter Reading Scheduler</label>
    </recordTypes>
    <recordTypes>
        <fullName>CountryDefaultBusinessHours</fullName>
        <active>true</active>
        <label>Country Default Business Hours</label>
    </recordTypes>
    <recordTypes>
        <fullName>CountryDefaultOperatingCalendar</fullName>
        <active>true</active>
        <description>This is the record type to define the default calendar to create for new account location / customer.</description>
        <label>Country Default Operating Calendar</label>
    </recordTypes>
    <recordTypes>
        <fullName>CountryPostalCodeTrim</fullName>
        <active>true</active>
        <description>This record type defines the country-specific number of characters to trim of a given postal code for searching recommended engineers.</description>
        <label>Country Postal Code Trim</label>
    </recordTypes>
    <recordTypes>
        <fullName>CountryResponseProfile</fullName>
        <active>true</active>
        <description>Country specific response profiles</description>
        <label>Country Response Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>CountryRoundTripSettings</fullName>
        <active>true</active>
        <description>Used to determine if Work Order Trigger is a Potential Round-Trip</description>
        <label>Country Round-Trip Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>CountryScheduleDateTimeSettings</fullName>
        <active>true</active>
        <label>Country Schedule Date/Time Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country_Default_Case_Owner_Rules</fullName>
        <active>true</active>
        <description>This record type is used to define default case ownership preferences per country</description>
        <label>Country Default Case Owner Rules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country_Email_Rules</fullName>
        <active>true</active>
        <description>This record type is used for storing email related information for countries</description>
        <label>Country Email Rules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country_Operating_Invoice_Bucket</fullName>
        <active>true</active>
        <description>This is the record type used for third party operating to map each activity duration to a specific bucket.</description>
        <label>Country Operating Invoice Bucket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country_Purchasing_Settings</fullName>
        <active>true</active>
        <label>Country Purchasing Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country_SLA_Derivation</fullName>
        <active>true</active>
        <label>Country SLA Derivation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country_Scheduling_Rules</fullName>
        <active>true</active>
        <description>This record type is used to define schedule offset per country.</description>
        <label>Country Scheduling Rules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country_Survey</fullName>
        <active>true</active>
        <label>Country Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country_Unknown_Contact_To_Account_Mapping</fullName>
        <active>true</active>
        <description>This record type is used to determine the default account for unknonwn contacts created when emails are being send and SF doesn&apos;t recognize the contact.</description>
        <label>Country Unknown Contact To Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>Currency_Code_Mappings</fullName>
        <active>true</active>
        <label>Currency Code Mappings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default_SAP_Internal_Order</fullName>
        <active>true</active>
        <description>Record type that will provide Default SAP Internal Order for newly created Tasks based on the country</description>
        <label>Default SAP Internal Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Template_Settings</fullName>
        <active>true</active>
        <label>Email Template Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fixed_Costs</fullName>
        <active>true</active>
        <description>This record type is used to define fixed costs applicable for each type.</description>
        <label>Fixed Costs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Journey_Trigger</fullName>
        <active>true</active>
        <description>This record type is used to enable journeys to be triggered.</description>
        <label>Journey Trigger</label>
    </recordTypes>
    <recordTypes>
        <fullName>Machine_Clean_Operating_PM_Rules</fullName>
        <active>true</active>
        <description>Used for scheduling tasks in advance for Machine Clean Operating</description>
        <label>Machine Clean Operating PM Rules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mass_Upload_Service_Settings</fullName>
        <active>true</active>
        <label>Mass Upload Service Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mean_Time_To_Operate_per_Call_Type</fullName>
        <active>true</active>
        <label>Mean Time To Operate per Call Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>MergeWTSwithPreventiveMaintenance</fullName>
        <active>true</active>
        <label>Merge WTS with Preventive Maintenance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Profile_Template</fullName>
        <active>true</active>
        <label>Mobile Profile Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operating_Task</fullName>
        <active>true</active>
        <label>Operating Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>RouteSalesSetting</fullName>
        <active>true</active>
        <description>[KTS-53]: Route sales record type that will used for identifying the threshold routesales</description>
        <label>Route Sales Setting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Specialist_Indicator</fullName>
        <active>true</active>
        <description>Defines the  tresholds for S10 and S15 WorkOrders to send an additional specialist to the Customer.</description>
        <label>Technical Specialist Indicator</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>